manifests/event-viewer/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: event-viewer
  namespace: event-viewer
  labels:
    app: event-viewer
spec:
  replicas: 1
  template:
    metadata:
      name: event-viewer
      labels:
        app: event-viewer
    spec:
      containers:
      - name: event-viewer
        image: codeformuenster/event-viewer:0.1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
