manifests/event-viewer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-viewer
  namespace: event-viewer
  labels:
    app: event-viewer
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: event-viewer
